syntax = "proto3";

option go_package = "bake-pancake/rpc";

package rpc;

import "google/protobuf/timestamp.proto";

service PancakeBakerService {
    // 指定されたメニューのパンケーキを焼く
    rpc Bake(BakeRequest) returns (BakeResponse) {}
    // メニューごとに焼いたパンケーキの数を返す
    rpc Report(ReportRequest) returns (ReportResponse) {}
}

// 1枚ごとに焼かれたパンケーキ
message Pancake {
    string chef_name = 1;
    Menu menu = 2;
    float technical_score = 3;
    google.protobuf.Timestamp created_at = 15;

    enum Menu {
        UNKNOWN = 0;
        CLASSIC = 1;
        BANANA_AND_WHIP = 2;
        BACON_AND_CHEESE = 3;
        MIX_BERRY = 4;
        BAKED_MARSHMALLOW = 5;
        SPICY_CURRY = 6;
    }
}

// どのくらいパンケーキを焼いたかについての報告書
message Report {
    message BakeCount {
        Pancake.Menu menu = 1;
        int32 count = 2;
    }
    repeated BakeCount bake_counts = 1;
}

message BakeRequest {
    Pancake.Menu menu = 1;
}

message BakeResponse {
    Pancake pancake = 1;
}

message ReportRequest {}

message ReportResponse {
    Report report = 1;
}
